kubernetes/app-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpets-web
  labels:
    app: gpets-web
spec:
  selector:
    matchLabels:
      app: gpets-web
  template:
    metadata:
      labels:
        app: gpets-web
    spec:
      imagePullSecrets:
        - name: gpets-docker-secret
      containers:
        - name: gpets-web
          image: docker.pkg.github.com/dinossaurz/gpets-web:latest
          ports:
            - containerPort: 3000
